--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p>This is a new repo...</p>
 <p>This is a new feature (dropdown)</p>
-<p?>This is a new feature (button)</p>
+<p>This is a new feature (button)</p>
 
